# bachelors-thesis

./: .directory  README.md
code/ros_workspace/src/main/: CMakeLists.txt  package.xml
code/ros_workspace/src/main/launch/: detect_and_move.launch  second.launch
code/ros_workspace/src/object_detection/: README.md
code/ros_workspace/src/object_detection/darknet_ros/: README.md
code/ros_workspace/src/object_detection/realsense-ros/: README.md
code/ros_workspace/src/object_detection/rv6l_3d/darknet_ros_3d/: CMakeLists.txt  package.xml
code/ros_workspace/src/object_detection/rv6l_3d/darknet_ros_3d/config/: darknet_3d.yaml
code/ros_workspace/src/object_detection/rv6l_3d/darknet_ros_3d/include/darknet_ros_3d/: Darknet3D.h  Darknet3DListener.h
code/ros_workspace/src/object_detection/rv6l_3d/darknet_ros_3d/src/: darknet3d_node.cpp
code/ros_workspace/src/object_detection/rv6l_3d/darknet_ros_3d/src/darknet_ros_3d/: Darknet3D.cpp
code/ros_workspace/src/object_detection/rv6l_3d/darknet_ros_3d/test/: darknet3d_listener_node.cpp
code/ros_workspace/src/object_detection/rv6l_3d_msgs/: CMakeLists.txt  README.md  package.xml
code/ros_workspace/src/object_detection/rv6l_3d_msgs/msg/: RV6L_position.msg
code/ros_workspace/src/object_movement/: README.md
code/ros_workspace/src/object_movement/rv6l_pick_and_place/: CMakeLists.txt  package.xml
code/ros_workspace/src/object_movement/rv6l_pick_and_place/bauplan/: collision _show.scene  collision_test_mid.scene  construct01.scene  construct01.txt  lampe_collision.scene  ursprung_objekte.scene
code/ros_workspace/src/object_movement/rv6l_pick_and_place/launch/: pick_and_place_test_2.launch
code/ros_workspace/src/object_movement/rv6l_pick_and_place/src/: bauplan_auswertung.py  handhabungssequenzen_bilderkennung.py  pick_and_place_detection_test.py  pick_and_place_movement.py  pick_and_place_movement_collision.py  planner_testing.py  subscriber_cam.py  test_subscribtion.py
code/ros_workspace/src/robot_interface/: README.md
code/yolo_samples/labeled_images/all_parts/: PXL_20220105_153011742.txt  PXL_20220105_153022197.txt  PXL_20220105_153027039.txt  PXL_20220105_153029849.txt  PXL_20220105_153038611.txt  PXL_20220105_153049645.txt  PXL_20220105_153055940.txt  PXL_20220105_153102455.txt  PXL_20220105_153110184.txt  PXL_20220105_153114771.txt  PXL_20220105_153116872.txt  PXL_20220105_153121140.txt  PXL_20220105_153122094.txt  PXL_20220105_153125064.txt  PXL_20220105_153133926.txt  PXL_20220105_153135729.txt  PXL_20220105_153137430.txt  PXL_20220105_153139290.txt  PXL_20220105_153140653.txt  PXL_20220105_153149919.txt  PXL_20220105_153237265.txt  PXL_20220105_153241958.txt  PXL_20220105_153250564.txt  PXL_20220105_153253041.txt  PXL_20220105_153257403.txt  PXL_20220105_153300555.txt  PXL_20220105_153305638.txt  PXL_20220105_153308608.txt  PXL_20220105_153313325.txt  PXL_20220105_153322507.txt  PXL_20220105_153325304.txt  PXL_20220105_153329130.txt  PXL_20220105_153331777.txt  PXL_20220105_153333464.txt  PXL_20220105_153338961.txt  PXL_20220105_153340081.txt  PXL_20220105_153341201.txt  PXL_20220105_153353154.txt  PXL_20220105_153400364.txt  PXL_20220105_153404879.txt  (+178 more)
code/yolo_samples/labeled_images/red_box/: PXL_20220105_153011742.txt  PXL_20220105_153022197.txt  PXL_20220105_153027039.txt  PXL_20220105_153029849.txt  PXL_20220105_153038611.txt  PXL_20220105_153049645.txt  PXL_20220105_153055940.txt  PXL_20220105_153102455.txt  PXL_20220105_153110184.txt  PXL_20220105_153114771.txt  PXL_20220105_153116872.txt  PXL_20220105_153121140.txt  PXL_20220105_153122094.txt  PXL_20220105_153125064.txt  PXL_20220105_153133926.txt  PXL_20220105_153135729.txt  PXL_20220105_153137430.txt  PXL_20220105_153139290.txt  PXL_20220105_153140653.txt  PXL_20220105_153149919.txt  PXL_20220105_153237265.txt  PXL_20220105_153241958.txt  PXL_20220105_153250564.txt  PXL_20220105_153253041.txt  PXL_20220105_153257403.txt  PXL_20220105_153300555.txt  PXL_20220105_153305638.txt  PXL_20220105_153308608.txt  PXL_20220105_153313325.txt  PXL_20220105_153322507.txt  PXL_20220105_153325304.txt  PXL_20220105_153329130.txt  PXL_20220105_153331777.txt  PXL_20220105_153333464.txt  PXL_20220105_153338961.txt  PXL_20220105_153340081.txt  PXL_20220105_153341201.txt  PXL_20220105_153353154.txt  PXL_20220105_153400364.txt  PXL_20220105_153404879.txt  (+19 more)
code/yolo_samples/weights/: red_box.weights
docs/: .directory  README.md  documentation.html
docs/attachments/Anhang A - RV6L 3D/A_1 - Konfiguration/: RV6L.yaml  darknet_3d.yaml
docs/attachments/Anhang A - RV6L 3D/A_2 - Bounding Box Funktion/: Darknet3DListener.cpp
docs/attachments/Anhang A - RV6L 3D/A_3 - Bounding Box Message/: RV6L_positions.msg
docs/attachments/Anhang A - RV6L 3D/A_4 - Launchfiles/: RV6L.launch  first.launch
docs/attachments/Anhang A - RV6L 3D/A_5 - ROS Package/: package.xml
docs/attachments/Anhang C - Handhabung/C_2 - Anfahren des Objekts/: pick_and_place_detection.py
docs/attachments/Anhang D - Darknet/D_1 - Darknet Konfiguration/: RV6L.cfg
docs/attachments/Anhang D - Darknet/D_2 - Objekt Konfiguration/: obj.data
docs/detailed_instructions/: README.md  custom_objects.md  setup.md  training.md
docs/latex_source/: Bachelorarbeit David Gries.aux  Bachelorarbeit David Gries.bbl  Bachelorarbeit David Gries.bcf  Bachelorarbeit David Gries.blg  Bachelorarbeit David Gries.equation  Bachelorarbeit David Gries.fdb_latexmk  Bachelorarbeit David Gries.fls  Bachelorarbeit David Gries.lof  Bachelorarbeit David Gries.maf  Bachelorarbeit David Gries.run.xml  Bachelorarbeit David Gries.tex  Bachelorarbeit David Gries.toc  Makefile
docs/latex_source/Kapitel/: Einleitung.tex  EvaluierungWeiterentwicklung.tex  Fazit.tex  Gesamtsystem.tex  SoftwareundHardware.tex  TechnischeGrundlagen.tex
docs/latex_source/Literatur/: Literatur_David.bib  Literatur_Dennis.bib
docs/latex_source/Seiten/: Abstract.tex  Acronyme.tex  Anhang.tex  Deckblaetter.tex
docs/latex_source/setup/: commands.tex  custom_packages.tex  listofequations.tex  macros.tex  packages.tex  page.tex
(+116 files in other folders)
