<?xml version="1.0"?>
<package format="2">
  <name>rv6l_3d_msgs</name>
  <version>1.0.0</version>
  <description>Message files for rv6l_3d</description>

  <maintainer email="dgries@mailbox.org">David Gries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
