<?xml version="1.0"?>
<package format="2">
  <name>rv6l_pick_and_place</name>
  <version>0.0.0</version>
  <description>The rv6l_pick_and_place package</description>

  <maintainer email="dennissteinbeck25@gmail.com">Dennis Steinbeck</maintainer>

  <license>TODO</license>
  
  <url type="website">https://rzlapgle01.intern.th-ab.de/s170417/rv6l-kinect</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nlopt</build_depend>
  <!--build_depend>moveit-chomp-optimizer-adapter</build_depend-->
  
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>interactive_markers</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_perception</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nlopt</build_export_depend>
  <!--build_export_depend>moveit-chomp-optimizer-adapter</build_export_depend-->
  
  <exec_depend>message_generation</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nlopt</exec_depend>
  <!--exec_depend>moveit-chomp-optimizer-adapter</exec_depend-->

  <export>
  </export>
</package>
