<?xml version="1.0"?>
<package format="2">
  <name>darknet_ros_3d</name>
  <version>1.0.0</version>
  <description>
	  This code was modified to work for the project-specific usecase. The
    marker array is unneeded and was removed from all sources. An object
    center calculation was added to the code and the bounding-box message
    was modified to only publish object class, probability and object center
    coordinates. Also, the message data type for the coordinates was adjusted
    to use float32 instead of float64 for compatibility reasons.
  </description>

  <maintainer email="dgries@mailbox.org">David Gries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_depend>rv6l_3d_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roslint</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>rv6l_3d_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>roslint</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <exec_depend>rv6l_3d_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>roslint</exec_depend>


  <export>
  </export>
</package>
